--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="_path" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\</Value>
     </Setting>
+    <Setting Name="auto_permission" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
