An option to turn off the long log.

--- a/App.config
+++ b/App.config
@@ -16,6 +16,9 @@
       <setting name="auto_permission" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="show_log" serializeAs="String">
+        <value>True</value>
+      </setting>
     </AutoFilePermission.Properties.Settings>
   </userSettings>
   <connectionStrings>
